--- a/index.html
+++ b/index.html
@@ -1,204 +1,1 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebStudio</title>
-  <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="normaliza.css">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <!-- Header -->
-  <header class="header">
-    <div class="container header-div">
-      <a href="index.html" class="logo"><span>Web</span>Studio</a>
-
-      <nav class="nav">
-        <ul class="nav-list">
-          <li><a href="index.html" class="nav-link current">Студія</a></li>
-          <li><a href="https://nik-kul.github.io/Portfolio/"class="nav-link">Портфоліо</a></li>
-          <li><a href="#" class="nav-link">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class = "hedul">
-        <li> <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-envelope-hover"></use></svg> <a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      </ul>
-      <ul class = "hedul">
-        <li> <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Vector"></use></svg><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </div>
-  </header>
-
-  <!-- Hero section -->
-  <section class="hero">
-    <div class="container">
-      <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-      <button class="hero-button">Замовити послугу</button>
-    </div>
-  </section>
-   
-  <!-- Features -->  
-  <section class="features section">
-    <div class="container"> 
-      <ul class="features-list">
-        <li class = "features-list-li">
-          <img src="photo_2025-09-14_12-33-03.jpg" alt="ghghgh" width="250px">
-          <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p class="feature-text">Ідейні міркування, і навіть початок<br> повсякденної роботи з формування<br> позиції.</p>
-        </li>   
-        <li class="features-list-li">  
-          <img src="photo_2025-09-14_12-33-07.jpg" alt="ghghgh" width="250px">
-          <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>          
-          <p class="feature-text">Завдання організації, особливо рамки<br> і місце навчання кадрів тягне у себе.</p>        
-        </li>      
-        <li class="features-list-li">     
-          <img src="photo_2025-09-14_12-33-11.jpg" alt="ghghgh" width="250px">
-          <h3 class="feature-title">ПЛАНУВАННЯ</h3>          
-          <p class="feature-text">Так само консультація з широким <br> активом значною мірою зумовлює.</p>        
-        </li>        
-        <li class="features-list-li">  
-          <img src="photo_2025-09-14_12-33-14.jpg" alt="ghghgh" width="250px">
-          <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>         
-          <p class="feature-text">Значимість цих проблем настільки<br> очевидна, що реалізація планових<br> завдань.</p>       
-        </li>      
-      </ul>
-    </div>
-  </section>
-<section class="WhatDoWeDo">
-        <div class="container WhatDoWeDo-section-container">
-          <h2 class="WhatDoWeDo-section-h2">Чим ми займаємося</h2>
-          <ul class="WhatDoWeDo-section-list">
-            <li class="WhatDoWeDo-section-list-items">
-              <img
-                src="8dac6a22eff34a388bbc6409758a002e5a58c3ca.jpg"
-                alt="img"
-                class="WhatDoWeDo-section-img-list-items"
-              />
-              <p class="WhatDoWeDo-p-list-items"><span>Десктопні додатки</span></p>
-            </li>
-            <li class="WhatDoWeDo-section-list-items">
-              <img
-                src="01590214fe209b7db875477ca0f844823574082d.jpg"
-                alt="img"
-                class="WhatDoWeDo-section-img-list-items"
-              />
-              <p class="WhatDoWeDo-p-list-items"><span>Мобільні додатки</span></p>
-            </li>
-            <li class="WhatDoWeDo-section-list-items">
-              <img
-                src="4ca103f5ff490664ba91f138b9f708e01d65306a.jpg"
-                alt="img"
-                class="WhatDoWeDo-section-img-list-items"
-              />
-              <p class="WhatDoWeDo-p-list-items"><span>Дизайнерські рішення</span></p>
-            </li>
-          </ul>
-        </div>
-      </section>
-  
-  <!-- Team -->
-
- <section class="team-section section">
-    <div class="container">
-      <h2 class="team-title" style="text-align: center;">Наша команда</h2>
-      <div class="team-container">
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-46-32.jpg" alt="Ігор Дем'яненко">
-          <div class="team-info">
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-          </div>
-        </div>
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-47-06.jpg" alt="Ольга Рєпіна">
-          <div class="team-info">
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
-          </div>
-        </div>
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-47-11.jpg" alt="Микола Тарасов">
-          <div class="team-info">
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
-          </div>
-        </div>
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-46-07.jpg" alt="Михайло Єрмаков">
-          <div class="team-info">
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
-          </div>
-        </div>
-      </div>
-    </div>
- </section>
-
-      <section class="regular-customers">
-        <h2 class="regular-customers-h2">Постійні клієнти</h2>
-        <ul class="regular-customers-list">
-          <div class = "box">
-          <li class="custom regular-customers-list-items 1">
-            <svg class="custom first-customer customer">
-            <use class = "custom" href="./symbol-defs.svg#icon-Client-1"></use>
-          </svg>
-        </li>
-        </div>
-          <div class = "box">
-          <li class="custom regular-customers-list-items">
-            <svg class="custom second-customer customer">
-            <use class = "custom" href="./symbol-defs.svg#icon-Client-2"></use>
-          </svg>
-        </li>
-          </div>
-      <div class = "box">
-          <li class="custom regular-customers-list-items">
-            <svg class="custom third-customer customer">
-            <use class = "custom" href="./symbol-defs.svg#icon-Client-3"></use>
-          </svg>
-        </li>
-          </div>
-       <div class = "box">
-          <li class="custom regular-customers-list-items">
-            <svg class="custom fourth-customer customer">
-            <use class = "custom" href="./symbol-defs.svg#icon-Client-4"></use>
-          </svg>
-          </li>
-            </div>
-            <div class = "box">
-          <li class="custom regular-customers-list-items">
-            <svg class="custom fifth-customer customer">
-            <use class = "custom" href="./symbol-defs.svg#icon-Client-5"></use>
-          </svg>
-        </li>
-            </div>
-         <div class = "box">
-          <li class="custom regular-customers-list-items">
-            <svg class="custom sixth-customer customer">
-            <use class = "custom" href="./symbol-defs.svg#icon-Client-6"></use>
-          </svg>
-        </li>
-          </div>
-        </ul>
-      </section>
-    </main>
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container foot">
-      <a href="index.html" class="logo"><span>Web</span>Studio</a>
-      <h4 style = "text-align:center;">Приєднуйтесь</h4>
-      <address class="footer-adress">
-        <ul class="footer-contacts">
-          <li class="footer-contacts-li">м. Київ, пр-т Лесі Українки, 26</li>
-          <li><a class="footer-contacts-li-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="footer-contacts-li-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </div>
-  </footer>
-</body>
-</html>
+<!DOCTYPE html> <html lang="uk"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>WebStudio</title> <link rel="stylesheet" href="../style.css"> <link rel="stylesheet" href="normaliza.css"> <link rel="stylesheet" href="styles.css"> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Raleway:wght@700&display=swap" rel="stylesheet"> </head> <body> <!-- Header --> <header class="header"> <div class="container header-div"> <a href="index.html" class="logo"><span>Web</span>Studio</a> <nav class="nav"> <ul class="nav-list"> <li><a href="index.html" class="nav-link current">Студія</a></li> <li><a href="https://nik-kul.github.io/Portfolio/"class="nav-link">Портфоліо</a></li> <li><a href="#" class="nav-link">Контакти</a></li> </ul> </nav> <ul class = "hedul"> <li> <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-envelope-hover"></use></svg> <a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li> </ul> <ul class = "hedul"> <li> <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Vector"></use></svg><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li> </ul> </div> </header> <!-- Hero section --> <section class="hero"> <div class="container"> <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1> <button class="hero-button">Замовити послугу</button> </div> </section> <!-- Features --> <section class="features section"> <div class="container"> <ul class="features-list"> <li class = "features-list-li"> <img src="photo_2025-09-14_12-33-03.jpg" alt="ghghgh" width="250px"> <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3> <p class="feature-text">Ідейні міркування, і навіть початок<br> повсякденної роботи з формування<br> позиції.</p> </li> <li class="features-list-li"> <img src="photo_2025-09-14_12-33-07.jpg" alt="ghghgh" width="250px"> <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3> <p class="feature-text">Завдання організації, особливо рамки<br> і місце навчання кадрів тягне у себе.</p> </li> <li class="features-list-li"> <img src="photo_2025-09-14_12-33-11.jpg" alt="ghghgh" width="250px"> <h3 class="feature-title">ПЛАНУВАННЯ</h3> <p class="feature-text">Так само консультація з широким <br> активом значною мірою зумовлює.</p> </li> <li class="features-list-li"> <img src="photo_2025-09-14_12-33-14.jpg" alt="ghghgh" width="250px"> <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3> <p class="feature-text">Значимість цих проблем настільки<br> очевидна, що реалізація планових<br> завдань.</p> </li> </ul> </div> </section> <section class="WhatDoWeDo"> <div class="container WhatDoWeDo-section-container"> <h2 class="WhatDoWeDo-section-h2">Чим ми займаємося</h2> <ul class="WhatDoWeDo-section-list"> <li class="WhatDoWeDo-section-list-items"> <img src="8dac6a22eff34a388bbc6409758a002e5a58c3ca.jpg" alt="img" class="WhatDoWeDo-section-img-list-items" /> <p class="WhatDoWeDo-p-list-items"><span>Десктопні додатки</span></p> </li> <li class="WhatDoWeDo-section-list-items"> <img src="01590214fe209b7db875477ca0f844823574082d.jpg" alt="img" class="WhatDoWeDo-section-img-list-items" /> <p class="WhatDoWeDo-p-list-items"><span>Мобільні додатки</span></p> </li> <li class="WhatDoWeDo-section-list-items"> <img src="4ca103f5ff490664ba91f138b9f708e01d65306a.jpg" alt="img" class="WhatDoWeDo-section-img-list-items" /> <p class="WhatDoWeDo-p-list-items"><span>Дизайнерські рішення</span></p> </li> </ul> </div> </section> <!-- Team --> <section class="team-section section"> <div class="container"> <h2 class="team-title" style="text-align: center;">Наша команда</h2> <div class="team-container"> <div class="team-member"> <img src="photo_2025-09-11_19-46-32.jpg" alt="Ігор Дем'яненко"> <div class="team-info"> <h3>Ігор Дем'яненко</h3> <p>Product Designer</p> </div> </div> <div class="team-member"> <img src="photo_2025-09-11_19-47-06.jpg" alt="Ольга Рєпіна"> <div class="team-info"> <h3>Ольга Рєпіна</h3> <p>Frontend Developer</p> </div> </div> <div class="team-member"> <img src="photo_2025-09-11_19-47-11.jpg" alt="Микола Тарасов"> <div class="team-info"> <h3>Микола Тарасов</h3> <p>Marketing</p> </div> </div> <div class="team-member"> <img src="photo_2025-09-11_19-46-07.jpg" alt="Михайло Єрмаков"> <div class="team-info"> <h3>Михайло Єрмаков</h3> <p>UI Designer</p> </div> </div> </div> </div> </section> <section class="regular-customers"> <h2 class="regular-customers-h2">Постійні клієнти</h2> <ul class="regular-customers-list"> <div class = "box"> <li class="custom regular-customers-list-items 1"> <svg class="custom first-customer customer"> <use class = "custom" href="./symbol-defs.svg#icon-Client-1"></use> </svg> </li> </div> <div class = "box"> <li class="custom regular-customers-list-items"> <svg class="custom second-customer customer"> <use class = "custom" href="./symbol-defs.svg#icon-Client-2"></use> </svg> </li> </div> <div class = "box"> <li class="custom regular-customers-list-items"> <svg class="custom third-customer customer"> <use class = "custom" href="./symbol-defs.svg#icon-Client-3"></use> </svg> </li> </div> <div class = "box"> <li class="custom regular-customers-list-items"> <svg class="custom fourth-customer customer"> <use class = "custom" href="./symbol-defs.svg#icon-Client-4"></use> </svg> </li> </div> <div class = "box"> <li class="custom regular-customers-list-items"> <svg class="custom fifth-customer customer"> <use class = "custom" href="./symbol-defs.svg#icon-Client-5"></use> </svg> </li> </div> <div class = "box"> <li class="custom regular-customers-list-items"> <svg class="custom sixth-customer customer"> <use class = "custom" href="./symbol-defs.svg#icon-Client-6"></use> </svg> </li> </div> </ul> </section> </main> <!-- Footer --> <footer class="footer"> <div class="container foot"> <a href="index.html" class="logo"><span>Web</span>Studio</a> <h4 style = "text-align:center;">Приєднуйтесь</h4> <address class="footer-adress"> <ul class="footer-contacts"> <li class="footer-contacts-li">м. Київ, пр-т Лесі Українки, 26</li> <li><a class="footer-contacts-li-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li> <li><a class="footer-contacts-li-tel" href="tel:+380961111111">+38 096 111 11 11</a></li> </ul> </address> </div> </footer> </body> </html>
