--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
           <div class="team-info">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
+             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -118,6 +119,7 @@
           <div class="team-info">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -125,6 +127,7 @@
           <div class="team-info">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -132,6 +135,7 @@
           <div class="team-info">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
           </div>
         </div>
       </div>
