--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
              <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -119,7 +122,10 @@
           <div class="team-info">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -127,7 +133,10 @@
           <div class="team-info">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -135,6 +144,9 @@
           <div class="team-info">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
           </div>
         </div>
