--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
           <div class="team-info">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
-             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
+             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -125,7 +125,7 @@
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -136,7 +136,7 @@
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
         </div>
         <div class="team-member">
@@ -147,7 +147,7 @@
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-3"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-icon-linkedin-1"></use></svg>
           </div>
         </div>
       </div>
