--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
           <div class="team-info">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
-             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#"></use></svg>
+             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
         </div>
@@ -122,9 +122,9 @@
           <div class="team-info">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
         </div>
@@ -133,9 +133,9 @@
           <div class="team-info">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
         </div>
@@ -144,9 +144,9 @@
           <div class="team-info">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-icon-linkedin-1"></use></svg>
           </div>
         </div>
