--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
              <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Ellipse-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
@@ -147,7 +147,7 @@
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-icon-linkedin-1"></use></svg>
+            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </div>
         </div>
       </div>
