--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
     <div class="container foot">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
       <h4 style = "text-align:center;">Приєднуйтесь</h4>
+      <svg><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+      <svg><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
+      <svg><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
+      <svg><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
       <address class="footer-adress">
         <ul class="footer-contacts">
           <li class="footer-contacts-li">м. Київ, пр-т Лесі Українки, 26</li>
