--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
       <h4 style = "text-align:center;">Приєднуйтесь</h4>
         <ul>
-          <li><svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg></li>
-            <li><svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg></li>
-             <li><svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg></li>
-              <li><svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg></li>
+          <li><svg style = "width: 20px; height: 20px;"><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg></li>
+            <li><svg style = "width: 20px; height: 20px;"><use href="./symbol-defs.svg#icon-twitter-1"></use></svg></li>
+             <li><svg style = "width: 20px; height: 29px;"><use href="./symbol-defs.svg#icon-facebook-1"></use></svg></li>
+              <li><svg style = "width: 20px; height: 20px;"> <use href="./symbol-defs.svg#icon-linkedin-1"></use></svg></li>
         </ul>
 
       <address class="footer-adress">
