--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="container foot">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
       <h4 style = "text-align:center;">Приєднуйтесь</h4>
-     <ul class="social-networks">
+     <ul class="social-networks-wrapper social-networks">
   <li>
     <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
   </li>
