--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
     <div class="container foot">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
       <h4 style = "text-align:center;">Приєднуйтесь</h4>
-     <ul class="social-networks-wrapper social-networks">
+      <div class = "social-networks-wrapper">
+     <ul class="social-networks">
   <li>
     <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
   </li>
@@ -228,6 +229,8 @@
     <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
   </li>
 </ul>
+      </div>
+  
 
       <address class="footer-adress">
         <ul class="footer-contacts">
