--- a/index.html
+++ b/index.html
@@ -215,21 +215,29 @@
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
       <h4 style = "text-align:center;">Приєднуйтесь</h4>
       <div class = "social-networks-wrapper">
-     <ul class="social-networks">
+        <ul class="social-list">
   <li>
-    <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+    </a>
   </li>
   <li>
-    <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
+    </a>
   </li>
   <li>
-    <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
+    </a>
   </li>
   <li>
-    <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
+    </a>
   </li>
 </ul>
-      </div>
+  </div
   
 
       <address class="footer-adress">
