--- a/index.html
+++ b/index.html
@@ -132,10 +132,30 @@
           <div class="team-info">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
-             <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
+                <div class = "social-networks-wrapper">
+        <ul class="social-list">
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
+    </a>
+  </li>
+</ul>
+      </div>
           </div>
         </div>
         <div class="team-member">
@@ -143,10 +163,30 @@
           <div class="team-info">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
+                <div class = "social-networks-wrapper">
+        <ul class="social-list">
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
+    </a>
+  </li>
+</ul>
+      </div>
           </div>
         </div>
         <div class="team-member">
@@ -154,10 +194,30 @@
           <div class="team-info">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
+               <div class = "social-networks-wrapper">
+        <ul class="social-list">
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
+    </a>
+  </li>
+</ul>
+      </div>
           </div>
         </div>
         <div class="team-member">
@@ -165,10 +225,30 @@
           <div class="team-info">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-instagram-2-2"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-twitter-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-facebook-1"></use></svg>
-            <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-linkedin-1"></use></svg>
+                <div class = "social-networks-wrapper">
+        <ul class="social-list">
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
+    </a>
+  </li>
+</ul>
+      </div>
           </div>
         </div>
       </div>
@@ -258,7 +338,7 @@
     </a>
   </li>
 </ul>
-  </div
+      </div>
   
 
       <address class="footer-adress">
