--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     
     <form action="">
       <label for="name">Name
-          <input type="text" name="name" id="name" placeholder="John" required>
+          <input type="text" name="name" id="name" placeholder="Kristina" required>
       </label>
       <label for="lname">Last name
-        <input type="text" name="lname" id="lname" placeholder="smith">
+        <input type="text" name="lname" id="lname" placeholder="Kulikova" required>
         <label for="name">Pass
         <input type="password" name="pass" id="pass" placeholder="****" required minlength="5" maxlength="12" title="min-5 max-12">
       </label>
