--- a/index.html
+++ b/index.html
@@ -311,44 +311,47 @@
       </section>
     </main>
   <!-- Footer -->
-  <footer class="footer">
-    <div class="container foot">
-      <a href="index.html" class="logo"><span>Web</span>Studio</a>
-      <h4 style = "text-align:center;">Приєднуйтесь</h4>
-      <div class = "social-networks-wrapper">
-        <ul class="social-list">
-  <li>
-    <a href="#">
-      <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
-    </a>
-  </li>
-  <li>
-    <a href="#">
-      <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
-    </a>
-  </li>
-  <li>
-    <a href="#">
-      <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
-    </a>
-  </li>
-  <li>
-    <a href="#">
-      <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
-    </a>
-  </li>
-</ul>
-      </div>
-  
+<footer class="footer">
+  <div class="container foot">
 
-      <address class="footer-adress">
-        <ul class="footer-contacts">
-          <li class="footer-contacts-li">м. Київ, пр-т Лесі Українки, 26</li>
-          <li><a class="footer-contacts-li-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="footer-contacts-li-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+    <div class="footer-left">
+      <a href="#" class="footer-logo"><span>Web</span>Studio</a>
+
+      <address class="footer-address">
+        <p class="footer-address-item">м. Київ, пр-т Лесі Українки, 26</p>
+        <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </div>
-  </footer>
+
+    <div class="footer-right">
+      <h4 class="footer-title">Приєднуйтесь</h4>
+
+      <ul class="footer-social">
+        <li>
+          <a href="#">
+            <svg><use href="./symbol-defs.svg#icon-instagram-2-2"></use></svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <svg><use href="./symbol-defs.svg#icon-twitter-1"></use></svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <svg><use href="./symbol-defs.svg#icon-facebook-1"></use></svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+</footer>
 </body>
 </html>
