--- a/index.html
+++ b/index.html
@@ -43,13 +43,19 @@
     <div class="modal">
     
     <form action="">
-      <label for="name">Name
-          <input type="text" name="name" id="name" placeholder="Kristina" required>
+      <h2 style = "text-align:center;">Залиште свої дані, ми вам передзвонимо</h2>
+      <label for="name">Ім'я
+          <input type="text" name="name" id="name" placeholder="" required>
       </label>
-      <label for="lname">Last name
-        <input type="text" name="lname" id="lname" placeholder="Kulikova" required>
-        <label for="name">Pass
-        <input type="password" name="pass" id="pass" placeholder="****" required minlength="5" maxlength="12" title="min-5 max-12">
+      <label for="lname">Телефон 
+        <input type="tel" name="lname" id="lname" placeholder="" required>
+        <label for="name">Пошта
+        <input type="email" name="pass" id="pass" placeholder="" required minlength="5" maxlength="12" title="min-5 max-12">
+      </label>
+          <label for="lname">Телефон 
+        <input type="tel" name="lname" id="lname" placeholder="" required>
+        <label for="name">Коментар
+        <input type="text" name="pass" id="pass" placeholder="" required minlength="5" maxlength="12" title="min-5 max-12">
       </label>
 <button class="submit">sub</button>
     </form>
