--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="hero">
     <div class="container">
       <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-      <button class="hero-button" data-modal-open>Замовити послугу</button>
+      <button class="hero-button" data-modal-open >Замовити послугу</button>
        <div class="backdrop is-hidden" data-modal>
     
     <div class="modal">
@@ -59,7 +59,7 @@
       </label>
 <button class="submit">sub</button>
     </form>
-    <button class="btn" data-modal-close>Закрити</button>
+    <button class="btn" data-modal-close disabled>Закрити</button>
   </div>
   
 </div>
