--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@
         <label for="name">Пошта
         <input type="email" name="pass" id="pass" placeholder="" required minlength="5" maxlength="12" title="min-5 max-12">
       </label>
-          <label for="lname">Телефон 
-        <input type="tel" name="lname" id="lname" placeholder="" required>
         <label for="name">Коментар
         <input type="text" name="pass" id="pass" placeholder="" required minlength="5" maxlength="12" title="min-5 max-12">
       </label>
-<button class="submit">sub</button>
+<button class="submit" disabled>submit</button>
     </form>
-    <button class="btn" data-modal-close disabled>Закрити</button>
   </div>
   
 </div>
