--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           <input type="text" name="name" id="name" placeholder="" required title = "name">
       </label>
       <label for="lname">Телефон 
-        <input type="tel" name="tel" id="tel" placeholder="" required title = "phone number">
+        <input type="tel" name="lname" id="lname" placeholder="" required title = "phone number">
         <label for="name">Пошта
-        <input type="email" name="email" id="email" placeholder="" required minlength="7"title="email">
+        <input type="email" name="pass" id="pass" placeholder="" required minlength="7"title="email">
       </label>
         <label for="name">Коментар
-        <input type="text" name="comment" id="comment" placeholder="" minlength="1" title="comment">
+        <input type="text" name="pass" id="pass" placeholder="" minlength="1" title="comment">
       </label>
 <button class="submit" disabled>submit</button>
     </form>
