--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       <label for="lname">Телефон 
         <input type="tel" name="lname" id="lname" placeholder="" required title = "phone number">
         <label for="name">Пошта
-        <input type="email" name="pass" id="pass" placeholder="" required minlength="7"title="email">
+        <input type="email" name="email" id="email" placeholder="" required minlength="7"title="email">
       </label>
         <label for="name">Коментар
-        <input type="text" name="pass" id="pass" placeholder="" minlength="1" title="comment">
+        <input type="text" name="submit" id="submit" placeholder="" minlength="1" title="comment">
       </label>
 <button class="submit" disabled>submit</button>
     </form>
