--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <input type="text" name="name" id="name" placeholder="" required title = "name">
       </label>
       <label for="lname">Телефон 
-        <input type="tel" name="lname" id="lname" placeholder="" required title = "phone number">
+        <input type="tel" name="phone" id="phone" placeholder="" required title = "phone number">
         <label for="name">Пошта
         <input type="email" name="email" id="email" placeholder="" required minlength="7"title="email">
       </label>
