--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
         <label for="name">Коментар
         <input type="text" name="submit" id="submit" placeholder="" minlength="1" title="comment">
       </label>
-<button class="submit" disabled>submit</button>
+<button class="submit" >submit</button>
     </form>
+      <button class = "btn" data-modal-close disabled></button>
   </div>
   
 </div>
