--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </label>
 
       <label>
-        <span>Телефон</span>
+        <span style = "color: black;">Телефон</span>
         <input type="tel" id="phone" required />
       </label>
 
