--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 
     <form class="modal-form">
       <label>
-        <span>Ім'я</span>
+        <span style = "color: black; text-align:left;">Ім'я</span>
         <input type="text" id="name" required />
       </label>
 
       <label>
-        <span style = "color: black;">Телефон</span>
+        <span style = "color: black; text-align:left;"">Телефон</span>
         <input type="tel" id="phone" required />
       </label>
 
       <label>
-        <span>Пошта</span>
+        <span style = "color: black; text-align:left;">Пошта</span>
         <input type="email" id="email" required />
       </label>
 
       <label>
-        <span>Коментар</span>
+        <span style = "color: black; text-align:left;">Коментар</span>
         <textarea id="comment"></textarea>
       </label>
 
