--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <label>
         <span style = "color: black; text-align:left;">Коментар</span>
-        <textarea id="comment"></textarea>
+        <textarea id="comment" placeholder = "введіть текст"></textarea>
       </label>
 
       <label class="checkbox">
