--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 
       <label>
         <span style = "color: black; text-align:left;">Пошта</span>
+        <svg><use ></use></svg>
         <input type="email" id="email" required />
       </label>
 
       <label>
         <span style = "color: black; text-align:left;">Коментар</span>
-        <textarea id="comment" placeholder = "введіть текст"></textarea>
+        <textarea id="comment" placeholder = "Введіть текст"></textarea>
       </label>
 
       <label class="checkbox">
