--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 
       <label>
         <span style = "color: black; text-align:left;">Пошта</span>
-        <svg><use ></use></svg>
-        <input type="email" id="email" required />
+        <input type="email" id="email" required /<svg><use href = "icon-email-black-18dp-1"></use></svg>>
       </label>
 
       <label>
