--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="modal-window">
     <button class="modal-close" data-modal-close>&times;</button>
 
-    <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+    <h2 class="modal-title" style = "text-align:left; color: black; ">Залиште свої дані, ми вам передзвонимо</h2>
 
     <form class="modal-form">
       <label>
@@ -51,7 +51,7 @@
       </label>
 
       <label>
-        <span style = "color: black; text-align:left;"">Телефон</span>
+        <span style = "color: black; text-align:left;">Телефон</span>
         <input type="tel" id="phone" required />
       </label>
 
