--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       </label>
 
       <label class="checkbox">
-        <input type="checkbox" id="agree" required />
+        <input style = "color:black;" type="checkbox" id="agree" required />
         Погоджуюсь з розсилкою та приймаю
-        <a href="#">Умови договору</a>
+        <a href="#" style = "color: #188CE8">Умови договору</a>
       </label>
 
       <button type="submit" class="send-btn">Відправити</button>
