--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
       </label>
 
       <label class="checkbox">
-        <input style = "color:black;" type="checkbox" id="agree" required />
-        Погоджуюсь з розсилкою та приймаю
-        <a href="#" style = "color: #188CE8">Умови договору</a>
+        <input style = "color:black;" type="checkbox" id="agree" required />  <p style = "color: black;">Погоджуюсь з розсилкою та приймаю</p> <a href="#" style = "color: #188CE8">Умови договору</a>
+
       </label>
 
       <button type="submit" class="send-btn">Відправити</button>
