--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <button class="hero-button" data-modal-open >Замовити послугу</button>
 <div class="backdrop is-hidden" data-modal>
   <div class="modal-window">
-    <button class="modal-close" data-modal-close>&times;</button>
+    <button class="modal-close close-btn" data-modal-close>&times;</button>
     <br>
     <h4 class="modal-title" style = "text-align:left; color: black;">Залиште свої дані, ми вам передзвонимо</h2>
 
